--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "git-filter-repo": "^0.0.30"
+    "express": "^4.18.2",
+    "git-filter-repo": "^0.0.30",
+    "googleapis": "^131.0.0"
   },
-  "main": "main.js"
+  "main": "main.js",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
