--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "git-filter-repo": "^0.0.30",
-    "googleapis": "^131.0.0"
+    "googleapis": "^131.0.0",
+    "node-fetch": "^2.7.0"
   },
   "main": "main.js",
   "devDependencies": {
